# necklace

./: .gitignore  1.nck  CHANGELOG.md  README.md  necklace.cabal  package.yaml  runtime.c  shelltest.sh  stack.yaml
.circleci/: config.yml
app/: Main.hs
app/Compiler/Parser/: Lexer.x
documentation/: main.tex
examples/: 1.nck  2.nck  3.nck  4.nck  5.nck  6.nck
shelltests/src/: arithmetic.nck  assignment-statement.nck  break-statement.nck  continue-statement.nck  if-statement.nck  while-loop.nck
shelltests/src/arithmetic-operators/: addition.nck  division.nck  modulo.nck  multiplication.nck  subtraction.nck
shelltests/src/array-operations/: alloc.nck  allocIntArray.nck
shelltests/src/conditional-operators/: and-operator.nck  or-operator.nck
shelltests/src/equality-operators/: equal-operator.nck  not-equal-operator.nck
shelltests/src/incorrect-assignments/: bool-to-int-assignment.nck  immutable-assignment.nck  int-to-bool-assignment.nck  int-to-pointer-assignment.nck  pointer-to-int-assignment.nck
shelltests/src/incorrect-operands/: and-operands.nck  bool-addition.nck  bool-comparison.nck  or-operands.nck
shelltests/src/incorrect-types/: argument-mismatch.nck  return-type-mismatch.nck
shelltests/src/invalid-syntax/: argument-without-type.nck  empty-function.nck  missing-semicolon.nck
shelltests/src/miscellaneous-invalid/: double-main.nck  if-condition-statement.nck  missing-argument.nck  missing-main.nck  missing-return.nck  undeclared-variable.nck  while-condition-statement.nck
shelltests/src/relational-operators/: greater-equal-operator.nck  greater-operator.nck  less-equal-operator.nck  less-operator.nck
shelltests/src/return-types/: fundamental-return-type.nck  void-return-type.nck
shelltests/src/statements/: assignment-statement.nck  if-statement.nck  return-statement.nck  while-statement.nck
shelltests/src/types/: array-type.nck  bool-type.nck  int-type.nck  pointer-type.nck
shelltests/src/unary-operators/: dereference.nck  not-operator.nck  unary-minus.nck
shelltests/tests/: arithmetic.test  continue-statement.test  while-loop.test
shelltests/tests/arithmetic-operators/: division.test  modulo.test  multiplication.test  subtraction.test
shelltests/tests/array-operations/: alloc.test
shelltests/tests/conditional-operators/: and-operator.test  or-operator.test
shelltests/tests/equality-operators/: equal-operator.test  not-equal-operator.test
shelltests/tests/incorrect-assignments/: bool-to-int-assignment.test  immutable-assignment.test  int-to-bool-assignment.test  int-to-pointer-assignment.test  pointer-to-int-assignment.test
shelltests/tests/incorrect-operands/: and-operands.test  bool-addition.test  bool-comparison.test  or-operands.test
shelltests/tests/incorrect-types/: argument-mismatch.test  return-type-mismatch.test
shelltests/tests/invalid-syntax/: argument-without-type.test  empty-function.test  missing-semicolon.test
shelltests/tests/miscellaneous-invalid/: double-main.test  if-condition-statement.test  missing-argument.test  missing-main.test  missing-return.test  undeclared-variable.test  while-condition-statement.test
shelltests/tests/relational-operators/: greater-equal-operator.test  greater-operator.test  less-equal-operator.test  less-operator.test
shelltests/tests/return-types/: fundamental-return-type.test  void-return-type.test
shelltests/tests/statements/: assignment-statement.test  break-statement.test  if-statement.test  return-statement.test  while-statement.test
shelltests/tests/types/: array-type.test  bool-type.test  int-type.test  pointer-type.test
shelltests/tests/unary-operators/: dereference.test  not-operator.test  unary-minus.test
src/: Main.hs
src/Codegen/: Codegen.hs
src/Compiler/: Lexer.hs  Lexer.x  Parser.hs  Parser.y
src/Compiler/Parser/: Lexer.hs  Lexer.x
src/ContextAnalysis/: Analyzer.hs  AnalyzerTypes.hs
src/FunctionBinder/: Binder.hs
src/Necklace/: AST.hs
src/StandardLib/: StandardLib.hs
test/: ContextAnalyzerSpec.hs  LexerSpec.hs  SpecHelper.hs
