cabal-version:      3.6
name:               necklace
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             pagmerek
maintainer:         p.gmerek@student.uj.edu.pl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
  build-depends:      base ^>=4.14.3.0
                      , text
                      , array
  build-tool-depends: alex:alex
  exposed-modules:    Compiler.Parser.Lexer, Necklace.AST
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
executable necklace_compiler
  main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

  build-depends:      base ^>=4.14.3.0
                      , text
  build-tool-depends: alex:alex
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  other-modules: LexerSpec SpecHelper
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base ^>=4.14.3.0
                 , hspec >= 2.7
                 , hspec-discover >= 2.7
                 , necklace
  default-language:    Haskell2010
  ghc-options: -Wall

